tests/baselines/reference/defaultKeywordWithoutExport2.errors.txt
defaultKeywordWithoutExport2.ts(1,1): error TS1005: 'export' expected.
defaultKeywordWithoutExport2.ts(1,18): error TS1003: Identifier expected.


==== defaultKeywordWithoutExport2.ts (2 errors) ====
    default function () {
    ~~~~~~~
!!! error TS1005: 'export' expected.
                     ~
!!! error TS1003: Identifier expected.
    
    }